<resources>
    <string name="app_name">Iwillbe</string>
    <string name="id">账号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="login_issue">登录遇到问题？</string>
    <string name="register">注册</string>
    <string name="other_login">其它登录</string>
    <string name="phonelogin">手机登录</string>
    <string name="weibologin">微博登录</string>
    <string name="qqlogin">QQ登录</string>
    <string name="phone">手机号：</string>
    <string name="code">验证码：</string>
    <string name="register_password">密码：</string>
    <string name="retype">在次输入：</string>
    <string name="register_consent">我以阅读并接受《我的网络服务协议》</string>
    <string name="confirm">确定</string>
    <string name="gain_code">获取验证码</string>
    <string name="new_passwrod">新密码</string>
    <string name="set_password">设置密码</string>
    <string name="how_set">如何设置可靠的密码？</string>
    <string name="one">1、密码长度8位以上</string>
    <string name="two">2、密码中包含数字、字母和特殊字符</string>
    <string name="three">3、加入1-2个大写字母</string>
    <string name="four">4、不适用一些连续重复的字母和数字</string>
    <string name="annotation">注：如未绑定手机,请拨打客服电话400-023-110</string>
    <string name="person_homepage">个人主页</string>
    <string name="fans">粉丝</string>
    <string name="about_one">约单</string>
    <string name="visitor">访客</string>
    <string name="longin_have_in">已在我会</string>
    <string name="day">天</string>
    <string name="real_name">实名认证</string>
    <string name="self_introdution">自我介绍</string>
    <string name="unfoid_all">展开查看全部</string>
    <string name="serve">TA的服务</string>
    <string name="demand">TA的需求</string>
    <string name="attention">+关注</string>
    <string name="little">找TA聊</string>
    <integer name="SINGLE_IMAGE_MODE_RELATIVE_TO_SELF">1</integer>
    <integer name="SINGLE_IMAGE_MODE_SPECIFIED_RATIO">2</integer>
    <string name="cancel">取消</string>
    <string name="turn_server">成为服务者</string>
    <string name="turn_server_need">成为我们的服务者你还是需要：</string>
    <string name="perfect_person_info">完善个人信息</string>
    <string name="turn_person_info">完善你的个人资料，看起来会更专业哦。</string>
    <string name="person_info">个人资料</string>
    <string name="unfinished">未完成</string>
    <string name="turn_real_name">完成实名认证，您的服务才能上架出售。您可以选择以下方式进行认证</string>
    <string name="id_card_approve">身份证认证</string>
    <string name="issue_server">发布服务</string>
    <string name="importe">请输入</string>
</resources>
