<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <!--导航栏-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/return_but"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@mipmap/register_icon_arrows" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/set_password"
            android:textSize="20sp"
            android:textColor="@color/black"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />
    <!--手机号-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/phone"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/phone_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/login_id_edittext"
            android:maxLines="1"
            android:padding="5dp"
            android:textColor="@color/grey"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/gain_code_but"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gain_code"
            android:textColor="@color/black"
            android:padding="8dp"
            android:textSize="15sp"
            android:background="@drawable/gain_code_but"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />
    <!--验证码-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/code"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/code_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/login_id_edittext"
            android:maxLines="1"
            android:padding="5dp"
            android:textColor="@color/grey"
            android:textSize="15sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />
    <!--新密码-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/new_passwrod"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/newpasswrd_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/login_id_edittext"
            android:maxLines="1"
            android:padding="5dp"
            android:textColor="@color/grey"
            android:textSize="15sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />
    <!--在次输入-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/retype"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/retype_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/login_id_edittext"
            android:maxLines="1"
            android:padding="5dp"
            android:textColor="@color/grey"
            android:textSize="15sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />
    <!--确定-->
    <Button
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_in_button"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="18sp" />
    <!--提醒-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_marginLeft="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_set"
            android:textColor="@color/grey"
            android:textSize="14sp"
            android:layout_marginTop="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one"
            android:textColor="@color/grey"
            android:textSize="14sp"
            android:layout_marginTop="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two"
            android:textColor="@color/grey"
            android:textSize="14sp"
            android:layout_marginTop="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three"
            android:textColor="@color/grey"
            android:textSize="14sp"
            android:layout_marginTop="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four"
            android:textColor="@color/grey"
            android:textSize="14sp"
            android:layout_marginTop="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/annotation"
            android:textColor="@color/grey"
            android:textSize="14sp"
            android:layout_marginTop="5dp"/>
    </LinearLayout>
</LinearLayout>