<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <!--导航栏-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/cancel_but"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/turn_server"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">
        <!--成为需要的东西-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/turn_server_need"
            android:textColor="@color/darkgray"
            android:textSize="15sp" />
        <!--完善个人信息-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/become_imag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/become_server_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_toRightOf="@id/become_imag"
                android:text="@string/perfect_person_info"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/back_grey"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/turn_person_info"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <LinearLayout
                android:id="@+id/person_info_linear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:background="@color/somber"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:src="@mipmap/person_info" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:text="@string/person_info"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/person_info_but"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:background="@drawable/turn_person_info_but"
                android:paddingBottom="3dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="3dp"
                android:text="@string/unfinished"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>
        <!--实名认证-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/real_imag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/become_server_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_toRightOf="@id/real_imag"
                android:text="@string/real_name"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/back_grey"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/turn_real_name"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <LinearLayout
                android:id="@+id/id_card_linear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:background="@color/somber"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/id_card_approve"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/real_name_but"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:background="@drawable/turn_person_info_but"
                android:paddingBottom="3dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="3dp"
                android:text="@string/unfinished"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>