<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <!--导航页-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/return_but"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@mipmap/register_icon_arrows" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/register"
            android:textSize="20sp"
            android:textColor="@color/black"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />
    <!--手机号-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/phone"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/phone_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/login_id_edittext"
            android:hint="请输入手机号"
            android:maxLines="1"
            android:padding="5dp"
            android:textColor="@color/grey"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/gain_code_but"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gain_code"
            android:textColor="@color/black"
            android:padding="8dp"
            android:textSize="15sp"
            android:background="@drawable/gain_code_but"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />
    <!--验证码-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/code"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/code_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/login_id_edittext"
            android:hint="6位验证"
            android:maxLines="1"
            android:padding="5dp"
            android:textColor="@color/grey"
            android:textSize="15sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />
    <!--密码-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/register_password"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/passwrd_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/login_id_edittext"
            android:hint="6-16位密码"
            android:maxLines="1"
            android:padding="5dp"
            android:textColor="@color/grey"
            android:textSize="15sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />
    <!--在次输入-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/retype"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/retype_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/login_id_edittext"
            android:maxLines="1"
            android:padding="5dp"
            android:textColor="@color/grey"
            android:textSize="15sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">
        <!--阅读接受-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/consent_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/register_box"
                android:button="@null" />

            <TextView
                android:id="@+id/consent_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/register_consent"
                android:textColor="@color/grey"
                android:textSize="15sp" />
        </LinearLayout>
        <!--确定-->
        <Button
            android:id="@+id/confirm_but"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_in_button"
            android:text="@string/confirm"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>