<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    >
    <!--头像图片-->
    <ImageView
        android:id="@+id/longin_head_imag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@mipmap/register_img_head"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true">
        <!--账号-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:text="@string/id"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/id_rdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/login_id_edittext"
                android:maxLines="1"
                android:textSize="18sp"
                android:maxLength="11"
                android:inputType="number"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/grey" />
        <!--密码-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:text="@string/password"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/passwrd_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/login_id_edittext"
                android:maxLength="16"
                android:maxLines="1"
                android:textSize="18sp"
                android:inputType="textPassword"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/grey" />
        <!--登陆-->
        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/register_button_re"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp" />
        <!--注册修改-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/login_issue_buuton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/login_issue"
                android:textColor="@color/cambridge_blue"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/register_btton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:paddingTop="10dp"
                android:text="@string/register"
                android:textColor="@color/cambridge_blue"
                android:textSize="18sp" />
        </RelativeLayout>
    </LinearLayout>
    <!--其它登录-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp">

        <LinearLayout
            android:id="@+id/longin_hhhh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/phone_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:drawablePadding="5dp"
                    android:drawableTop="@mipmap/register_icon_phone"
                    android:text="@string/phonelogin"
                    android:textColor="@color/darkgray"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/weibologin_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:drawablePadding="5dp"
                    android:drawableTop="@mipmap/register_icon_weibo"
                    android:text="@string/weibologin"
                    android:textColor="@color/darkgray"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/qqlogin_btton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:drawableTop="@mipmap/register_icon_qq"
                    android:text="@string/qqlogin"
                    android:textColor="@color/darkgray"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/longin_hhhh"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@color/grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/other_login"
                android:textColor="@color/darkgray"
                android:textSize="16sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@color/grey" />
        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>